# Email-RAG

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: answer.py  config.py  db.py  embedding.py  fastapi_compat.py  ingest.py  models.py  query_rewrite.py  retrieval.py
app/api/: main.py
data/: sample.mbox
docs/: GETTING_STARTED.md  SPEC.md
fastapi/: __init__.py  testclient.py
scripts/: ingest.py  run_api.sh  streamlit_app.py
tests/: conftest.py  test_api.py  test_ingest.py  test_retrieval.py
