[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-rag-mvp"
version = "0.1.0"
description = "Local email RAG MVP with FastAPI, Streamlit, Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "streamlit>=1.35.0",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*", "scripts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
